# nwb-to-xarray

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
scripts/: receptive_fields_xarray.py
src/nwb_to_xarray/: __init__.py  core.py  ecephys.py  ophys.py  stimulus.py
tests/: __init__.py  test_core.py  test_ecephys.py  test_ophys.py  test_stimulus.py
