[project]
name = "nwb-to-xarray"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "xarray",
]

[dependency-groups]
dev = [
    "ipykernel",
    "matplotlib>=3.10.3",
    "ndx-pose>=0.2.2",
    "neuroconv",
    "pre-commit",
    "pytest>=8.4.1",
    "roiextractors",
    "spikeinterface",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nwb_to_xarray"]

[tool.uv.sources]
neuroconv = { path = "../neuroconv", editable = true }
xarray = { path = "../xarray", editable = true }
spikeinterface = { path = "../spikeinterface" }
roiextractors = { path = "../roiextractors" }
